strings resources added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,110 +128,117 @@
         <item>p_0_potassium</item>
         <item>p_0_rubidium</item>
         <item>p_0_sodium</item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>p_1_barium</item>
+        <item>p_1_beryllium</item>
+        <item>p_1_calcium</item>
+        <item>p_1_magnesium</item>
+        <item>p_1_radium</item>
+        <item>p_1_strontium</item>
+        <item>p_2_bohrium</item>
+        <item>p_2_cadmium</item>
+        <item>p_2_chromium</item>
+        <item>p_2_cobalt</item>
+        <item>p_2_copernicium</item>
+        <item>p_2_copper</item>
+        <item>p_2_darmstadtium</item>
+        <item>p_2_dubnium</item>
+        <item>p_2_gold</item>
+        <item>p_2_hafnium</item>
+        <item>p_2_hassium</item>
+        <item>p_2_iridium</item>
+        <item>p_2_iron</item>
+        <item>p_2_manganese</item>
+        <item>p_2_meitnerium</item>
+        <item>p_2_mercury</item>
+        <item>p_2_molybdenum</item>
+        <item>p_2_nickel</item>
+        <item>p_2_niobium</item>
+        <item>p_2_osmium</item>
+        <item>p_2_palladium</item>
+        <item>p_2_platinum</item>
+        <item>p_2_rhenium</item>
+        <item>p_2_rhodium</item>
+        <item>p_2_roentgenium</item>
+        <item>p_2_ruthenium</item>
+        <item>p_2_rutherfordium</item>
+        <item>p_2_scandium</item>
+        <item>p_2_seaborgium</item>
+        <item>p_2_silver</item>
+        <item>p_2_tantalum</item>
+        <item>p_2_technetium</item>
+        <item>p_2_titanium</item>
+        <item>p_2_tungsten</item>
+        <item>p_2_vanadium</item>
+        <item>p_2_yttrium</item>
+        <item>p_2_zinc</item>
+        <item>p_2_zirconium</item>
+        <item>p_3_aluminum</item>
+        <item>p_3_bismuth</item>
+        <item>p_3_flerovium</item>
+        <item>p_3_gallium</item>
+        <item>p_3_indium</item>
+        <item>p_3_lead</item>
+        <item>p_3_livermorium</item>
+        <item>p_3_thallium</item>
+        <item>p_3_tin</item>
+        <item>p_3_ununpentium</item>
+        <item>p_3_ununtrium</item>
+        <item>p_4_antimony</item>
+        <item>p_4_arsenic</item>
+        <item>p_4_boron</item>
+        <item>p_4_germanium</item>
+        <item>p_4_polonium</item>
+        <item>p_4_silicon</item>
+        <item>p_4_tellurium</item>
+        <item>p_5_carbon</item>
+        <item>p_5_hydrogen</item>
+        <item>p_5_nitrogen</item>
+        <item>p_5_oxygen</item>
+        <item>p_5_phosphorus</item>
+        <item>p_5_selenium</item>
+        <item>p_5_sulfur</item>
+        <item>p_6_astatine</item>
+        <item>p_6_bromine</item>
+        <item>p_6_chlorine</item>
+        <item>p_6_fluorine</item>
+        <item>p_6_iodine</item>
+        <item>p_6_ununseptium</item>
+        <item>p_7_argon</item>
+        <item>p_7_helium</item>
+        <item>p_7_krypton</item>
+        <item>p_7_neon</item>
+        <item>p_7_radon</item>
+        <item>p_7_ununoctium</item>
+        <item>p_7_xenon</item>
+        <item>p_8_cerium</item>
+        <item>p_8_dysprosium</item>
+        <item>p_8_erbium</item>
+        <item>p_8_europium</item>
+        <item>p_8_gadolinium</item>
+        <item>p_8_holmium</item>
+        <item>p_8_lanthanum</item>
+        <item>p_8_lutetium</item>
+        <item>p_8_neodymium</item>
+        <item>p_8_praseodymium</item>
+        <item>p_8_promethium</item>
+        <item>p_8_samarium</item>
+        <item>p_8_terbium</item>
+        <item>p_8_thulium</item>
+        <item>p_8_ytterbium</item>
+        <item>p_9_actinium</item>
+        <item>p_9_americium</item>
+        <item>p_9_berkelium</item>
+        <item>p_9_californium</item>
+        <item>p_9_curium</item>
+        <item>p_9_einsteinium</item>
+        <item>p_9_fermium</item>
+        <item>p_9_lawrencium</item>
+        <item>p_9_mendelevium</item>
+        <item>p_9_neptunium</item>
+        <item>p_9_nobelium</item>
+        <item>p_9_plutonium</item>
+        <item>p_9_protactinium</item>
+        <item>p_9_thorium</item>
+        <item>p_9_uranium</item>
     </string-array>
 </resources>
