all answer choices added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -415,424 +415,424 @@
         <item>protactinium</item>
 
         <item>rhenium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>retinal</item>
+        <item>rheumium</item>
+        <item>rhenin</item>
 
         <item>rhodium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>rhodit</item>
+        <item>rholandium</item>
+        <item>rholig</item>
 
         <item>roentgenium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ruegenium</item>
+        <item>rhodium</item>
+        <item>radish</item>
 
         <item>ruthenium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ruth</item>
+        <item>rothal</item>
+        <item>ruthnium</item>
 
         <item>rutherfordium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>radagstium</item>
+        <item>rathershortium</item>
+        <item>refracterium</item>
 
         <item>scandium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>schlandium</item>
+        <item>scandinavium</item>
+        <item>syncithium</item>
 
         <item>seaborgium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>sergeant</item>
+        <item>sogium</item>
+        <item>sagolat</item>
 
         <item>silver</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>agon</item>
+        <item>agranium</item>
+        <item>gold</item>
 
         <item>tantalum</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>thalium</item>
+        <item>transium</item>
+        <item>tequila</item>
 
         <item>technetium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>tchibonium</item>
+        <item>tecnon</item>
+        <item>thulicinin</item>
 
         <item>titanium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>tittenium</item>
+        <item>threnoin</item>
+        <item>titium</item>
 
         <item>tungsten</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>wambin</item>
+        <item>twugnium</item>
+        <item>wharium</item>
 
         <item>vanadium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>vaginin</item>
+        <item>visceron</item>
+        <item>vitamin</item>
 
         <item>yttrium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ytterbium</item>
+        <item>yawnium</item>
+        <item>yankin</item>
 
         <item>zinc</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>zirconium</item>
+        <item>zin</item>
+        <item>zenith</item>
 
         <item>zirconium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>zipper</item>
+        <item>zeronin</item>
+        <item>zebranium</item>
 
         <item>aluminum</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>alosinin</item>
+        <item>ablatium</item>
+        <item>aclamin</item>
 
         <item>bismuth</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>bohrium</item>
+        <item>bromine</item>
+        <item>bismoclite</item>
 
         <item>flerovium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>flenserium</item>
+        <item>falconin</item>
+        <item>feasilium</item>
 
         <item>gallium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>gadolinium</item>
+        <item>gamut</item>
+        <item>gauzin</item>
 
         <item>indium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>iron</item>
+        <item>incubatium</item>
+        <item>infinitium</item>
 
         <item>lead</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>promebium</item>
+        <item>pobarium</item>
+        <item>labium</item>
 
         <item>livermorium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>lavendium</item>
+        <item>livtanin</item>
+        <item>lovarium</item>
 
         <item>thallium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>tin</item>
+        <item>terbium</item>
+        <item>titanium</item>
 
         <item>tin</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>strontium</item>
+        <item>silicon</item>
+        <item>scandium</item>
 
         <item>ununpentium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ununtrium</item>
+        <item>unulatium</item>
+        <item>uupsium</item>
 
         <item>ununtrium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ununpentium</item>
+        <item>unnutarium</item>
+        <item>ubutrat</item>
 
         <item>antimony</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>seaborgium</item>
+        <item>sambarium</item>
+        <item>sabart</item>
 
         <item>arsenic</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>astatine</item>
+        <item>asphamine</item>
+        <item>asthmarium</item>
 
         <item>boron</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>basalt</item>
+        <item>bhorium</item>
+        <item>bantha</item>
 
         <item>germanium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>generositium</item>
+        <item>gentrit</item>
+        <item>gem</item>
 
         <item>polonium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>potassium</item>
+        <item>plutonium</item>
+        <item>promethium</item>
 
         <item>silicon</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>silver</item>
+        <item>simpletium</item>
+        <item>sincerium</item>
 
         <item>tellurium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>terbium</item>
+        <item>technetium</item>
+        <item>tebalt</item>
 
         <item>carbon</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>calcium</item>
+        <item>copper</item>
+        <item>chromium</item>
 
         <item>hydrogen</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>hafnium</item>
+        <item>helium</item>
+        <item>holmium</item>
 
         <item>nitrogen</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>nickel</item>
+        <item>neon</item>
+        <item>nobelium</item>
 
         <item>oxygen</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>osmium</item>
+        <item>opium</item>
+        <item>oxide</item>
 
         <item>phosphorus</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>platinum</item>
+        <item>protactinium</item>
+        <item>polonium</item>
 
         <item>selenium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>seaborgium</item>
+        <item>sepia</item>
+        <item>septatium</item>
 
         <item>sulfur</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>sterilium</item>
+        <item>survelur</item>
+        <item>syringinin</item>
 
         <item>astatine</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>actinium</item>
+        <item>antimony</item>
+        <item>atrophie</item>
 
         <item>bromine</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>barium</item>
+        <item>bohrium</item>
+        <item>boron</item>
 
         <item>chlorine</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>calcium</item>
+        <item>californium</item>
+        <item>chloe</item>
 
         <item>fluorine</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>fermium</item>
+        <item>francium</item>
+        <item>faunium</item>
 
         <item>iodine</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>iridium</item>
+        <item>iron</item>
+        <item>indium</item>
 
         <item>ununseptium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ununbium</item>
+        <item>ununhexium</item>
+        <item>ununquadium</item>
 
         <item>argon</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>americium</item>
+        <item>arsenic</item>
+        <item>arson</item>
 
         <item>helium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>helix</item>
+        <item>hefnium</item>
+        <item>hesitancium</item>
 
         <item>krypton</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>krafton</item>
+        <item>kryptonite</item>
+        <item>kindred</item>
 
         <item>neon</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>neptunium</item>
+        <item>neodymium</item>
+        <item>neutron</item>
 
         <item>radon</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>rhenium</item>
+        <item>ruthenium</item>
+        <item>roentgenium</item>
 
         <item>ununoctium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ununseptium</item>
+        <item>ununtrium</item>
+        <item>ununium</item>
 
         <item>xenon</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>xebec</item>
+        <item>xerophyte</item>
+        <item>xenthophon</item>
 
         <item>cerium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>cesium</item>
+        <item>cedmium</item>
+        <item>cebalt</item>
 
         <item>dysprosium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>dystopia</item>
+        <item>dynamium</item>
+        <item>dyslexium</item>
 
         <item>erbium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>erection</item>
+        <item>eruditin</item>
+        <item>erbsolin</item>
 
         <item>europium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>eutectin</item>
+        <item>euphemium</item>
+        <item>euphorin</item>
 
         <item>gadolinium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>gold</item>
+        <item>glandin</item>
+        <item>glissadium</item>
 
         <item>holmium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>hydrogen</item>
+        <item>hofnium</item>
+        <item>hotrid</item>
 
         <item>lanthanum</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>lawrencium</item>
+        <item>laudanum</item>
+        <item>lathin</item>
 
         <item>lutetium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>lungin</item>
+        <item>lummoxium</item>
+        <item>luxuranium</item>
 
         <item>neodymium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>nodium</item>
+        <item>noradium</item>
+        <item>nutmarium</item>
 
         <item>praseodymium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>promethium</item>
+        <item>protactinium</item>
+        <item>pramarium</item>
 
         <item>promethium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>protactinium</item>
+        <item>potassium</item>
+        <item>plutonium</item>
 
         <item>samarium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>sodium</item>
+        <item>selenium</item>
+        <item>scandium</item>
 
         <item>terbium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>terbium</item>
+        <item>tabium</item>
+        <item>tilithium</item>
 
         <item>thulium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>tantalum</item>
+        <item>tellurium</item>
+        <item>titanium</item>
 
         <item>ytterbium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>yuccabium</item>
+        <item>yakkun</item>
+        <item>yttarium</item>
 
         <item>actinium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>arsenic</item>
+        <item>abudancium</item>
+        <item>acreaginium</item>
 
         <item>americium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>amplificium</item>
+        <item>amitin</item>
+        <item>amphibonin</item>
 
         <item>berkelium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>bokinarium</item>
+        <item>bankium</item>
+        <item>beatnikin</item>
 
         <item>californium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>calfium</item>
+        <item>centrifugin</item>
+        <item>chamfin</item>
 
         <item>curium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>cadmium</item>
+        <item>calcium</item>
+        <item>cerium</item>
 
         <item>einsteinium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>ellipsoidium</item>
+        <item>ensemblium</item>
+        <item>epsomium</item>
 
         <item>fermium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>francium</item>
+        <item>figmentium</item>
+        <item>fortunin</item>
 
         <item>lawrencium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>laborium</item>
+        <item>lapidarium</item>
+        <item>lyriist</item>
 
         <item>mendelevium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>mendelevium</item>
+        <item>malladium</item>
+        <item>mupnium</item>
 
         <item>neptunium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>noprobliarium</item>
+        <item>nosphorus</item>
+        <item>neuropium</item>
 
         <item>nobelium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>notchin</item>
+        <item>novelium</item>
+        <item>novicitin</item>
 
         <item>plutonium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>pneumonium</item>
+        <item>purismin</item>
+        <item>pursaitium</item>
 
         <item>protactinium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>palladium</item>
+        <item>platinum</item>
+        <item>polmium</item>
 
         <item>thorium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>thallium</item>
+        <item>thulium</item>
+        <item>throntium</item>
 
         <item>uranium</item>
-        <item></item>
-        <item></item>
-        <item></item>
+        <item>usmium</item>
+        <item>uronium</item>
+        <item>ustanin</item>
 
     </string-array>
 </resources>
